[build-system]
requires = []

[project]
name = "riemann-thermodynamic-framework"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "mpmath>=1.3",
  "sympy>=1.12",
  "matplotlib>=3.8",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
